--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 <div class="flex px-[1rem] h-[12%] rounded-t-lg justify-between bg-[#e0e0e0]">
                   <h2 class="my-auto text-xl font-semibold text-ellipsis overflow-hidden w-[16rem]">Chapters yet to be Complete</h2>
                   <p class="my-[.5rem] w-[5rem] text-center" data-listCount></p>
-                  <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
+                  <!-- <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                       <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
                     </svg>
-                  </button>
+                  </button> -->
                 </div>
                 <div class="w-full h-[78%] rounded-b-lg">
                   <div class="w-full h-full overflow-y-auto" data-tasks>
@@ -86,10 +86,10 @@
                   </form>
                 </div>
               </div>
-              <div class="flex my-[1rem] justify-between">
+              <!-- <div class="flex my-[1rem] justify-between">
                 <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-clearTaskBtn>Clear Task</button>
                 <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-deleteListBtn>Delete List</button>
-              </div>
+              </div> -->
             </div>
           </div>
   
@@ -99,11 +99,11 @@
                 <div class="flex px-[1rem] h-[12%] rounded-t-lg justify-between bg-[#e0e0e0]">
                   <h2 class="my-auto text-xl font-semibold text-ellipsis overflow-hidden w-[16rem]">Completed Chapters</h2>
                   <p class="my-[.5rem] w-[5rem] text-center" data-completed-listCount></p>
-                  <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
+                  <!-- <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                       <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
                     </svg>
-                  </button>
+                  </button> -->
                 </div>
                 <div class="w-full h-[88%] rounded-b-lg">
                   <div class="w-full h-full overflow-y-auto" data-completed-tasks>
@@ -131,18 +131,18 @@
         </div>
         <div class="w-[15%] flex justify-center items-center">
           <div class="w-[80%] me-5">
-            <div>
+            <!-- <div>
               <p class="w-full text-base" data-display-date></p>
               <p class="w-full text-sm" data-display-time></p>
-            </div>
-            <div class="taskDateTimeContainer hidden">
+            </div> -->
+            <!-- <div class="taskDateTimeContainer hidden">
               <form action="" class="taskDateFrom">
                 <input type="text" class="w-full text-base taskDate border-2 rounded border-[#828282] px-2" placeholder="you can edit date" value="" data-display-date-inp>
               </form>
               <form class="taskTimeFrom">
                 <input type="text" class="w-full text-sm taskTime border-2 rounded border-[#828282] px-2" placeholder="you can edit time" value="" data-display-time-inp>
               </form>
-            </div>
+            </div> -->
           </div>
           <div class="w-[20%] flex justify-center items-center">
             <button class="saveChange hidden rounded px-2 border border-[#828282]">Save</button>
