--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div class='w-screen h-screen flex'>
     <div class='lg:w-1/5 w-full h-screen bg-gray-900 md:block hidden'>
       <p class="w-full text-2xl font-bold text-[#FFFFFF] h-[10%] px-7 py-[1rem]">My Lists</p>
-      <nav>
-        <ul class='list-disc w-full h-full overflow-y-auto' data-lists-dui></ul>
+      <nav class="lg:w-full h-full">
+        <ul class='list-disc w-full h-full overflow-y-auto overflow-x-hidden' data-lists-dui></ul>
       </nav>
       <form action="" data-mainListForm-dui class="flex justify-center items-center px-5 h-[10%] mainListForm">
-        <div class="flex fixed bottom-0 pe-[1rem] w-[96%]">
+        <div class="flex fixed bottom-4 left-5 pe-[1rem]">
           <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
           <input type="text" data-addNewList-dui class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] w-full bg-transparent ms-[1rem] focus-visible:outline-none placeholder:text-[#ffffff77] addNewList" placeholder="new list name">        
         </div>
@@ -69,11 +69,11 @@
                 <div class="flex px-[1rem] h-[12%] rounded-t-lg justify-between bg-[#e0e0e0]">
                   <h2 class="my-auto text-xl font-semibold text-ellipsis overflow-hidden w-[16rem]">Chapters yet to be Complete</h2>
                   <p class="my-[.5rem] w-[5rem] text-center" data-listCount></p>
-                  <!-- <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
+                  <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                       <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
                     </svg>
-                  </button> -->
+                  </button>
                 </div>
                 <div class="w-full h-[78%] rounded-b-lg">
                   <div class="w-full h-full overflow-y-auto" data-tasks>
@@ -86,10 +86,10 @@
                   </form>
                 </div>
               </div>
-              <!-- <div class="flex my-[1rem] justify-between">
+              <div class="flex my-[1rem] justify-between">
                 <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-clearTaskBtn>Clear Task</button>
                 <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-deleteListBtn>Delete List</button>
-              </div> -->
+              </div>
             </div>
           </div>
   
@@ -99,11 +99,11 @@
                 <div class="flex px-[1rem] h-[12%] rounded-t-lg justify-between bg-[#e0e0e0]">
                   <h2 class="my-auto text-xl font-semibold text-ellipsis overflow-hidden w-[16rem]">Completed Chapters</h2>
                   <p class="my-[.5rem] w-[5rem] text-center" data-completed-listCount></p>
-                  <!-- <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
+                  <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                       <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
                     </svg>
-                  </button> -->
+                  </button>
                 </div>
                 <div class="w-full h-[88%] rounded-b-lg">
                   <div class="w-full h-full overflow-y-auto" data-completed-tasks>
@@ -118,9 +118,9 @@
 
     <template id="tempTask" class="">
       <div class="relative p-[1rem] text-xl border-b-2 flex">
-        <div class="inline-flex w-[85%] items-center">
+        <div class="inline-flex w-[85%] items-center" data-task-data-holder-onclick>
           <div>
-            <input type="checkbox" class="taskNameDisplay absolute opacity-0">
+            <input type="checkbox" class="taskNameDisplay absolute opacity-0 top-[14px] left-[14px] z-10 w-[30rem] h-[2rem] cursor-pointer">
             <label class="taskNameLabeled w-[100%]" id="" data-task-name-labeled="">
               <span class="custom-checkbox"></span>
             </label>
@@ -131,18 +131,18 @@
         </div>
         <div class="w-[15%] flex justify-center items-center">
           <div class="w-[80%] me-5">
-            <!-- <div>
+            <div>
               <p class="w-full text-base" data-display-date></p>
               <p class="w-full text-sm" data-display-time></p>
-            </div> -->
-            <!-- <div class="taskDateTimeContainer hidden">
+            </div>
+            <div class="taskDateTimeContainer hidden">
               <form action="" class="taskDateFrom">
                 <input type="text" class="w-full text-base taskDate border-2 rounded border-[#828282] px-2" placeholder="you can edit date" value="" data-display-date-inp>
               </form>
               <form class="taskTimeFrom">
                 <input type="text" class="w-full text-sm taskTime border-2 rounded border-[#828282] px-2" placeholder="you can edit time" value="" data-display-time-inp>
               </form>
-            </div> -->
+            </div>
           </div>
           <div class="w-[20%] flex justify-center items-center">
             <button class="saveChange hidden rounded px-2 border border-[#828282]">Save</button>
